correção de logout para register

--- a/html/login.html
+++ b/html/login.html
@@ -12,7 +12,7 @@
         <h1>Portaria da Comunidade</h1>
         <button class="menu-button" onclick="toggleDropdown()">☰ Menu</button>
         <div class="dropdown" id="dropdownMenu">
-            <a href="logout.html">Cadastre-se</a>
+            <a href="register.html">Cadastre-se</a>
             <a href="#">Seja um ponto parceiro</a>
         </div>
     </header>
