--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <button class="menu-button" onclick="toggleDropdown()">☰ Menu</button>
         <div class="dropdown" id="dropdownMenu">
             <a href="html/login.html">Entrar</a>
-            <a href="html/logout.html">Cadastre-se</a>
+            <a href="html/register.html">Cadastre-se</a>
             <a href="#">Seja um ponto parceiro</a>
         </div>
     </header>
