--- a/html/register.html
+++ b/html/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/logout.css">
+    <link rel="stylesheet" href="../style/register.css">
     <title>Portaria-da-Comunidade</title>
 </head>
 <body>
