Ajuste de title do login e register e conteudo do index

--- a/html/register.html
+++ b/html/register.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <header>
-        <h1>Portaria da Comunidade</h1>
+        <a class="title" href="../index.html">
+          <h1>Portaria da Comunidade</h1>
+        </a>
         <button class="menu-button" onclick="toggleDropdown()">☰ Menu</button>
         <div class="dropdown" id="dropdownMenu">
           <a href="login.html">Entrar</a>
