--- a/html/forgotPassword.html
+++ b/html/forgotPassword.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portaria da Comunidade</title>
-    <link rel="stylesheet" href="../style/login.css">
+    <link rel="stylesheet" href="../style/forgotPassword.css">
 </head>
 <body>
     <header>
@@ -14,25 +14,20 @@
         </a>
         <button class="menu-button" onclick="toggleDropdown()">☰ Menu</button>
         <div class="dropdown" id="dropdownMenu">
+            <a href="login.html">Entrar</a>
             <a href="register.html">Cadastre-se</a>
             <a href="#">Seja um ponto parceiro</a>
         </div>
     </header>
     <main>
-        <div class="login-container">
-            <h2 id="login-title">Entrar</h2>
-            <form id="formlogin" aria-labelledby="login-title">
+        <div class="password-Container">
+            <h2 id="form-title">Recuperar Senha</h2>
+            <p id="form-desc">Digite seu e-mail para redefinir sua senha</p>
+            <form id="formPassword" aria-labelledby="form-title" aria-describedby="form-desc">
                 <label for="email">Email</label>
-                <input type="email" id="email" name="email" autocomplete="email" placeholder="Digite seu email" required />
+                <input type="email" id="email" name="email" autocomplete="email" placeholder="Digite seu Email" required>
 
-                <label for="senha">Senha</label>
-                <input type="password" id="senha" name="senha" autocomplete="current-password" placeholder="Digite sua senha" required />
-                
-                <div class="forgot-password">
-                    <a href="forgotPassword.html">Esqueceu a senha?</a>
-                </div>
-                
-                <button type="submit">Entrar</button>
+                <button type="submit">Recuperar</button>
             </form>
         </div>
     </main>
