--- a/html/register.html
+++ b/html/register.html
@@ -20,23 +20,23 @@
       </header>
       <main>
         <div class="container">
-          <form id="formCadastro">
-            <h2 class="container-cadastro">Cadastre-se:</h2>
+          <form id="formCadastro" aria-labelledby="cadastro-title">
+            <h2 id="cadastro-title" class="container-cadastro">Cadastre-se:</h2>
 
             <label for="nome">Nome:</label>
-            <input type="text" id="nome" name="nome" placeholder="Digite Seu Nome" required />
+            <input type="text" id="nome" name="nome" autocomplete="name" placeholder="Digite Seu Nome" required />
 
             <label for="sobrenome">Sobrenome:</label>
-            <input type="text" id="sobrenome" name="sobrenome" placeholder="Digite Seu Sobrenome" required />
+            <input type="text" id="sobrenome" name="sobrenome" autocomplete="family-name" placeholder="Digite Seu Sobrenome" required />
 
             <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" placeholder="Digite Um Email Válido" required />
+            <input type="email" id="email" name="email" autocomplete="email" placeholder="Digite Um Email Válido" required />
 
             <label for="senha">Senha:</label>
-            <input type="password" id="senha" name="senha" placeholder="Minimo 6 Caracteres" required minlength="6" />
+            <input type="password" id="senha" name="senha" autocomplete="new-password" placeholder="Minimo 6 Caracteres" required minlength="6" />
 
             <label for="dataNascimento">Data de Nascimento:</label>
-            <input type="date" id="dataNascimento" name="dataNascimento" required />
+            <input type="date" id="dataNascimento" name="dataNascimento" autocomplete="bday" required />
 
             <button type="submit">Cadastrar-se</button>
           </form>
