--- a/html/login.html
+++ b/html/login.html
@@ -40,6 +40,7 @@
         <p>Desenvolvido por Douglas Araújo e Esley Gomes</p>
         <p>&copy; Todos os direitos reservados</p>
     </footer>
-    <script src="../script.js"></script>
+    <script src="../js/common.js"></script>
+    <script src="../js/login.js"></script>
 </body>
 </html>
