--- a/html/resetpassword.html
+++ b/html/resetpassword.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../style/resetpassword.css">
     <title>Portaria da Comunidade</title>
-    <link rel="stylesheet" href="../style/forgotPassword.css">
 </head>
 <body>
     <header>
@@ -20,22 +20,21 @@
         </div>
     </header>
     <main>
-        <div class="password-Container">
-            <h2 id="form-title">Recuperar Senha</h2>
-            <p id="form-desc">Digite seu e-mail para redefinir sua senha</p>
-            <form id="formPassword" aria-labelledby="form-title" aria-describedby="form-desc">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" autocomplete="email" placeholder="Digite o e-mail cadastrado" required>
-
-                <button type="submit">Recuperar</button>
+        <div class="box">
+            <h2>Redefinir Senha</h2>
+            <form id="resetForm">
+                <input type="password" id="senha" placeholder="Nova senha" autocomplete="new-password" required minlength="6" />
+                <input type="password" id="confirmar" placeholder="Confirmar senha" autocomplete="new-password" required minlength="6" />
+                <button type="submit">Salvar nova senha</button>
             </form>
+            <p id="msg" style="color:red;"></p>
         </div>
-    </main>
+  </main>
     <footer>
         <p>Desenvolvido por Douglas Araújo e Esley Gomes</p>
         <p>&copy; Todos os direitos reservados</p>
     </footer>
     <script src="../js/common.js"></script>
-    <script src="../js/forgotPassword.js"></script>
+    <script src="../js/resetpassword.js"></script>
 </body>
 </html>
