--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <p><b style="color: #C54F2B;">Portaria da Comunidade</b> é um site feito para ajudar moradores de bairros onde os aplicativos de entrega (como iFood, Shopee, Mercado Livre, Uber, 99Pop e outros) não chegam. Funciona assim: você entra no nosso site, faz seu cadastro e encontra um ponto de entrega perto da sua casa. Na hora de fazer uma compra pelo app, basta usar o endereço desse ponto como destino. Depois, volta ao nosso site e cadastra sua encomenda. Quando o pedido chegar ao ponto de entrega, a pessoa responsável avisa no sistema, e você pode ir lá buscar com segurança. É simples, rápido e feito para a sua comunidade.</p>
         </div>
         <div class="conteudo-imagem">
-            <img src="image/ciclo-entrega.png" alt="ilustra o ciclo de uma entrega">
+            <img class="imageDesktop" src="image/ciclo-entrega.png" alt="ilustra o ciclo de uma entrega">
+            <img class="imageMobile" src="image/ciclo-entrega-mobile.png" alt="ilustra o ciclo de uma entrega">
         </div>
     </main>
     
